unpackaged/main/default/objects/Sentry_Active_Config__c/Sentry_Active_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The active Configuration to use for Sentry</description>
    <label>Sentry Active Config</label>
</CustomObject>