unpackaged/main/default/objects/Sentry_Active_Config__c/fields/IsDebug__c.field-meta.xml
<CustomField>
    <fullName>IsDebug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Debug Enabled?</description>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>