unpackaged/main/default/objects/Sentry_Active_Config__c/fields/IsIssueCreationDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsIssueCreationDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Issue Creation Disabled?</description>
    <label>Issue Creation Disabled?</label>
    <type>Checkbox</type>
</CustomField>